Move TextConverter to use DocStore